@@ -20,6 +20,8 @@ Revision history for AnyEvent::IRC
         - changed send_msg() in that way that the prefix can't be given anymore,
           as AnyEvent::IRC is specialized on clients anyway.
         - Renamed AnyEvent::IRC::Client::Connection to AnyEvent::IRC::Client
+        - Implemented prefix<=>mode mapping for nicks
+        - Added test utility module and first automated connect test
 
 0.5     Sun Mar 11 23:54:10 CET 2007
         - added server password support
